# metube-sync

./: .gitignore  README.md  main.py  pyproject.toml
src/: archive.py  artists.py  cli.py  config.py  releases.py
tests/: conftest.py  test_archive.py  test_cli.py  test_releases.py
