[project]
name = "metube-sync"
version = "0.1.0"
description = "Tracks new YouTube Music releases from followed artists"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich>=15.0.0",
    "typer>=0.26.7",
    "ytmusicapi>=1.12.1",
]

[project.scripts]
metube-sync = "src.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
